--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,17 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Corazon</title>
 </head>
-<body>
-    <div class="container">
 
-        <label for="corazon" class="c">
-            <div id="lottie"></div>
+<body>
+    <div class="contenedor-corazon">
+        <div id="lottie"></div>
+        <label for="corazon" class="label-corazon" id="label-corazon">
             <input type="checkbox" name="corazon" id="corazon">
         </label>
-
     </div>
     <script src="js/lottie.min.js"></script>
     <script src="js/data.js"></script>
     <script src="js/myScript.js"></script>
 </body>
+
 </html>
